--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="mastfoot">
         <div class="inner">
-          <p>&copy; micropedia: Designed by <a href="https://github.com/yasinbakhtiar">Yasin Balhtiar</a></p>
+          <p>&copy; micropedia: Designed by <a href="https://github.com/yasinbakhtiar">Yasin Bakhtiar</a></p>
         </div>
       </div>
       <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
