--- a/index.html
+++ b/index.html
@@ -1,64 +1,33 @@
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Micropedia</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="crossorigin"/>
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&amp;display=swap"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&amp;display=swap" media="print" onload="this.media='all'"/>
-    <noscript>
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&amp;display=swap"/>
-    </noscript>
-    <link href="css/bootstrap.min.css?ver=1.2.0" rel="stylesheet">
-    <link href="css/font-awesome/css/all.min.css?ver=1.2.0" rel="stylesheet">
-    <link href="css/main.css?ver=1.2.0" rel="stylesheet">
-  </head>
-  <body id="top"><div class="site-wrapper">
-  <div class="site-wrapper-inner">
-    <div class="cover-container">
-      <div class="masthead clearfix">
-        <div class="inner">
-          <h3 class="masthead-brand">Coming Soon</h3>
-          <nav class="nav nav-masthead">
-            <a class="nav-link nav-social" href="https://www.aparat.com/micropedia" title="Apart"><i class="fab fa-youtube" aria-hidden="true"></i></a>
-            <a class="nav-link nav-social" href="https://github.com/Micropedia/" title="Github"><i class="fab fa-github" aria-hidden="true"></i></a>
-          </nav>
+    <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/bd-coming-soon.css">
+	<link rel="icon" href="assets/images/favicon.jpg" type="images/jpg">
+</head>
+
+<body class="min-vh-100 d-flex flex-column" >
+    <main class="my-auto">
+        <div class="container">
+			<h1 class="micropedia">Micropedia</h1>
+            <h1 class="page-title">We're coming soon</h1>
+            <p class="page-description">
+			Our exciting new website is coming soon!
+            </p>
+            <p>Stay connected</p>
+            <nav class="footer-social-links">
+                <a href="https://github.com/micropedia" class="social-link"><i class="mdi mdi-github-circle"></i></a>
+                <a href="https://www.aparat.com/micropedia" class="social-link"><i class="mdi mdi-youtube"></i></a>
+            </nav>
         </div>
-      </div>      
-      <div class="inner cover">
-        <h1 class="cover-heading">Micropedia</h1>
-        <p class="lead cover-copy">Our exciting new Website is coming soon!</p>
-        <p class="lead"><button type="button" class="btn btn-lg btn-default btn-notify" data-toggle="modal" data-target="#subscribeModal">About</button></p>
-      </div>
-      <div class="mastfoot">
-        <div class="inner">
-          <p>&copy; micropedia: Designed by <a href="https://github.com/yasinbakhtiar">Yasin Bakhtiar</a></p>
-        </div>
-      </div>
-      <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="subscribeModalLabel">About us:</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="recipient-name" class="form-control-label">Micropedia provides free programming tutorials for beginners who want to learn computer programming. Enjoy coding! </label>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-    </div>
-  </div>
-</div>
-    <script src="scripts/jquery.slim.min.js?ver=1.2.0"></script>
-    <script src="scripts/bootstrap.bundle.min.js?ver=1.2.0"></script>
-    <script src="scripts/main.js?ver=1.2.0"></script>
-  </body>
+    </main>
+</body>
+
 </html>
